4/4.5/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    environment: development
